--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Full Stack Blog App</title>
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://kit.fontawesome.com/01096a2386.js" crossorigin="anonymous"></script>
   </body>
 </html>
