--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Full Stack Blog App</title>
+    <title>BlogScape - Discovering the World through the Lens of Blogging</title>
   </head>
   <body>
     <div id="root"></div>
